--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 registry=https://registry.npmjs.org/
-//registry.npmjs.org/:_authToken=
-//bin.swisscom.com/artifactory/api/npm/:_authToken=
+//registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}
+//bin.swisscom.com/artifactory/api/npm/:_authToken=${SWISSCOM_AUTH_TOKEN}
