--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 registry=https://registry.npmjs.org/
 //registry.npmjs.org/:_authToken=${NPM_AUTH_TOKEN}
 //bin.swisscom.com/artifactory/api/npm/:_authToken=${SWISSCOM_AUTH_TOKEN}
+//bin.swisscom.com/artifactory/api/npm/apps-team-npm-virtual/:_authToken=${APPS_TEAM_AUTH_TOKEN}
